mail and username workin

--- a/week3/about_me_app/app/views/shared/_form.html.erb
+++ b/week3/about_me_app/app/views/shared/_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_with(model: @user, local: true) do |f| %>
+<%= bootstrap_form_with(model:@postpage , local: true) do |f| %>
   <%= f.text_field :name%>
   <%= f.email_field :email %>
   <%= f.submit "SUBMIT" %>
