--- a/week3/about_me_app/app/views/shared/_navbar.html.erb
+++ b/week3/about_me_app/app/views/shared/_navbar.html.erb
@@ -1,21 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">HOME co .in </a>
+  <a class="navbar-brand" href="#">HOMEco.in </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">about_form</a>
+        <a class="nav-link" href="/">about_form</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">about_json</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link" href="/json">about_json</a>
       </li>
     </ul>
   </div>
