working json query final commit for w-3
Signed-off-by: lohith <lohith1024@gmail.com>

--- a/week3/about_me_app/app/views/about/home.html.erb
+++ b/week3/about_me_app/app/views/about/home.html.erb
@@ -1,8 +1,8 @@
-
 <div class ="container">
      
-        <h1>About us<h1>
-        <%= render partial:"shared/form"%>  
-
+        <h1>home page<h1>
+        <p> links to respective pages are given in nav bar<p>
+        <h1>about_form responce page can only be assessed through user input submission<h1>
+        <%# <%= render partial:"shared/form"%>   
         <%=yield %>
 <div>
