--- a/week3/about_me_app/app/views/about/postpage.html.erb
+++ b/week3/about_me_app/app/views/about/postpage.html.erb
@@ -6,10 +6,10 @@
 
 <div class="container">
 
-<h1>ABOUT PAGE<h1>
+<h1>ABOUT_form responce PAGE<h1>
 
   <br>
      Your name is <%= @name %>.
      your mail is <%=@email %>.
-<br>
+  <br>
 <div>
