--- a/week3/about_me_app/app/views/shared/_navbar.html.erb
+++ b/week3/about_me_app/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">HOMEco.in </a>
+  <a class="navbar-brand" href="/">HOMEco.in </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -9,7 +9,7 @@
         <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/">about_form</a>
+        <a class="nav-link" href="/about_form">about_form</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/json">about_json</a>
