--- a/week3/about_me_app/app/views/about_page/home.html.erb
+++ b/week3/about_me_app/app/views/about_page/home.html.erb
@@ -3,7 +3,7 @@
     About Me App
   </div>
   <div class="card-body">
-    <h5 class="card-title">Hello</h5>
+    <h5 class="card-title">Hello!</h5>
     <p class="card-text">Click the link below to go to the form</p>
     <%= link_to 'Fill Form', form_path%>
   </div>
