--- a/week3/about_me_app/app/views/about_page/index.html.erb
+++ b/week3/about_me_app/app/views/about_page/index.html.erb
@@ -1,2 +1,3 @@
+<br>
 <h3>Home page</h3>
-<p><%= link_to "Add new Book", {:action => 'about_form' }%></p>
+<p><%= link_to "Add your details", {:action => 'about_form' }%></p>
