--- a/week3/about_me_app/app/views/about_page/_form.html.erb
+++ b/week3/about_me_app/app/views/about_page/_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_with url:page_path,layout: :horizontal, method: :post do |f|%>
+<%= bootstrap_form_with url:about_page_path,layout: :horizontal, method: :post do |f|%>
 <%= f.text_field  :name%>
 <%= f.text_field :email%>
 <%= f.submit "SUBMIT"%> 
