--- a/week3/about_me_app/app/views/about_page/home.html.erb
+++ b/week3/about_me_app/app/views/about_page/home.html.erb
@@ -5,6 +5,6 @@
   <div class="card-body">
     <h5 class="card-title">Hello!</h5>
     <p class="card-text">Click the link below to go to the form</p>
-    <%= link_to 'Fill Form', form_path%>
+    <%= link_to 'Fill Form', about_form_path%>
   </div>
 </div>
