--- a/week3/about_me_app/app/views/layouts/application.html.erb
+++ b/week3/about_me_app/app/views/layouts/application.html.erb
@@ -9,8 +9,10 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  
   <body>
     <%= yield %>
-  </body>
+  </body><br><br><br><br><br><br>
+
+  <center><h4>copyright</h4></center>
 </html>
